# texas-cc-benchmarking

./: .gitignore  README.md  main.py  pyproject.toml
dagster_pipelines/: pyproject.toml  setup.py
dagster_pipelines/dagster_pipelines/: assets.py  definitions.py  project.py  resources.py  schedules.py
dashboard/: app.py
scripts/: download_ipeds.py  upload_to_snowflake.py
setup/: snowflake_setup.sql
texas_cc_benchmarking/: dbt_project.yml
texas_cc_benchmarking/models/marts/: _schema.yml  dim_texas_institutions.sql  fct_student_outcomes.sql  rpt_equity_dashboard.sql  rpt_peer_comparison.sql
texas_cc_benchmarking/models/staging/: _stg_sources.yml  stg_ipeds__completions.sql  stg_ipeds__enrollment.sql  stg_ipeds__financial_aid.sql  stg_ipeds__graduation_rates.sql  stg_ipeds__institutions.sql  stg_ipeds__retention_rates.sql
texas_cc_benchmarking/seeds/: c_a_2020.csv  c_a_2021.csv  c_a_2022.csv  c_a_2023.csv  c_a_2024.csv  ef_d_2020.csv  ef_d_2021.csv  ef_d_2022.csv  ef_d_2023.csv  ef_d_2024.csv  effy.csv  effy_2020.csv  effy_2021.csv  effy_2022.csv  effy_2023.csv  effy_2024.csv  gr.csv  gr_2020.csv  gr_2021.csv  gr_2022.csv  gr_2023.csv  gr_2024.csv  hd.csv  hd_2020.csv  hd_2021.csv  hd_2022.csv  hd_2023.csv  hd_2024.csv  sfa.csv  sfa_2020.csv  sfa_2021.csv  sfa_2022.csv  sfa_2023.csv  sfa_2024.csv
