[project]
name = "dagster_pipelines"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "dagster",
    "dagster-dbt",
    "dbt-core<1.12",
    "dbt-duckdb<1.12",
    "dbt-snowflake<1.12",
]

[project.optional-dependencies]
dev = ["dagster-webserver"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "dagster_pipelines.definitions"
code_location_name = "dagster_pipelines"
